--- a/mclaren.html
+++ b/mclaren.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style_mclaren.css">
 </head>
 <div class="nav-buttons">
-    <a href="porshe.html">Porsche GT3 RS</a>
+    <a href="index.html">Porsche GT3 RS</a>
     <a href="ferrari-f40.html">Ferrari F40</a>
     <a href="ferrari-f80.html">Ferrari F80</a>
     <a href="bmw-m4.html">BMW M4</a>
