--- a/ferrari-f40.html
+++ b/ferrari-f40.html
@@ -7,7 +7,7 @@
 </head>
 
 <div class="nav-buttons">
-    <a href="school_stuff.html">Porsche GT3 RS</a>
+    <a href="index.html">Porsche GT3 RS</a>
     <a href="ferrari-f80.html">Ferrari F80</a>
     <a href="mclaren.html">McLaren</a>
     <a href="bmw-m4.html">BMW M4</a>
