--- a/bmw-m4.html
+++ b/bmw-m4.html
@@ -15,7 +15,7 @@
 <h1>BMW M4</h1>
 
 <p class="desc">
-    BMW M4 — мощное купе немецкого бренда, сочетающее спортивный характер и комфорт повседневного автомобиля.
+Автомобили M BMW 4 серии Coupe впечатляющим образом сочетают в себе эстетическую привлекательность, харизму и фирменный спортивный стиль M.
 </p>
 
 <img src="m4.png" alt="BMW M4" width="500">
@@ -30,6 +30,7 @@
 
 <footer>
     mail: student25002@sch192.net
+    link: https://bmw-eurosib.ru/all-models/4-series-coupe-m/
 </footer>
 </body>
 </html>
