--- a/bmw-m4.html
+++ b/bmw-m4.html
@@ -29,7 +29,7 @@
 </ul>
 
 <footer>
-    mail: student25002@sch192.net
+    <br> mail: student25002@sch192.net </br>
     link: https://bmw-eurosib.ru/all-models/4-series-coupe-m/
 </footer>
 </body>
