--- a/bmw-m4.html
+++ b/bmw-m4.html
@@ -29,7 +29,10 @@
 </ul>
 
 <footer>
-    <br> mail: student25002@sch192.net </br>
+     mail: student25002@sch192.net
+</footer>
+<footer>
+    
     link: https://bmw-eurosib.ru/all-models/4-series-coupe-m/
 </footer>
 </body>
