--- a/ferrari-f40.html
+++ b/ferrari-f40.html
@@ -17,8 +17,8 @@
 <h1>Ferrari F40</h1>
 
 <p class="desc">
-    Ferrari F40 — культовый суперкар конца 1980-х, созданный в честь 40-летия компании Ferrari.
-    Считается одной из самых легендарных моделей бренда.
+    
+Ferrari F40 — среднемоторный двухдверный заднеприводный суперкар, имеющий кузов типа берлинетта. Производился Ferrari с 1987 по 1992. В общей сложности было произведено 1315 таких авто. 
 </p>
 
 <img src="f40.png" alt="Ferrari F40" width = "500">
@@ -33,6 +33,7 @@
 
 <footer>
     mail: student25002@sch192.net
+    link: https://ru.m.wikipedia.org/wiki/Ferrari_F40
 </footer>
 </body>
 </html>
