--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
 <footer>
     mail: student25002@sch192.net
+    link: https://auto.ru/catalog/cars/porsche/911_gt3/20950163/21206682/specifications/
 </footer>
 </body>
 </html>
