--- a/bmw-m4.html
+++ b/bmw-m4.html
@@ -32,8 +32,9 @@
      mail: student25002@sch192.net
 </footer>
 <footer>
-    
-    link: https://bmw-eurosib.ru/all-models/4-series-coupe-m/
+    <a href=https://bmw-eurosib.ru/all-models/4-series-coupe-m/
+</footer>>Посетите BMW.com</a>
+
 </footer>
 </body>
 </html>
