--- a/bmw-m4.html
+++ b/bmw-m4.html
@@ -32,8 +32,8 @@
      mail: student25002@sch192.net
 </footer>
 <footer>
-    <a href=https://bmw-eurosib.ru/all-models/4-series-coupe-m/
-</footer>>Посетите BMW.com</a>
+    <a href="https://bmw-eurosib.ru/all-models/4-series-coupe-m/">Посетите BMW.com</a>
+</footer>
 
 </footer>
 </body>
