--- a/mclaren.html
+++ b/mclaren.html
@@ -37,6 +37,7 @@
 
 <footer>
     mail: student25002@sch192.net
+    <a href="https://auto.ru/catalog/cars/mclaren/p1/20157987/20157990/specifications/"> Характеристики </a>
 </footer>
 </body>
 </html>
