--- a/ferrari-f80.html
+++ b/ferrari-f80.html
@@ -31,7 +31,7 @@
 </ul>
 <footer>
     mail: student25002@sch192.net
-    https://ru.m.wikipedia.org/wiki/Ferrari_F80
+    <a href="https://ru.m.wikipedia.org/wiki/Ferrari_F80"> Характеристики </a>
 </footer>
 
 </body>
