--- a/ferrari-f40.html
+++ b/ferrari-f40.html
@@ -32,7 +32,7 @@
 
 <footer>
     mail: student25002@sch192.net
-    link: https://ru.m.wikipedia.org/wiki/Ferrari_F40
+    <a href="https://ru.m.wikipedia.org/wiki/Ferrari_F40"> Характеристики </a>
 </footer>
 </body>
 </html>
